--- a/HW2/HW2.ipynb
+++ b/HW2/HW2.ipynb
@@ -3,6 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 125,
+   "id": "88226dba",
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 13,
    "id": "7e97a30c",
    "metadata": {},
    "outputs": [
@@ -193,15 +194,133 @@
      ]
     },
     {
-     "ename": "NameError",
-     "evalue": "name 'model_arima_100' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[129], line 5\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;66;03m# Fit ARIMA(1,0,1) model to the training data\u001b[39;00m\n\u001b[1;32m      4\u001b[0m model_arima_101 \u001b[38;5;241m=\u001b[39m ARIMA(train_set[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mSales\u001b[39m\u001b[38;5;124m'\u001b[39m], order\u001b[38;5;241m=\u001b[39m(\u001b[38;5;241m1\u001b[39m,\u001b[38;5;241m0\u001b[39m,\u001b[38;5;241m1\u001b[39m), seasonal_order\u001b[38;5;241m=\u001b[39m(\u001b[38;5;241m0\u001b[39m,\u001b[38;5;241m0\u001b[39m,\u001b[38;5;241m0\u001b[39m,\u001b[38;5;241m12\u001b[39m))\n\u001b[0;32m----> 5\u001b[0m results_arima_101 \u001b[38;5;241m=\u001b[39m model_arima_100\u001b[38;5;241m.\u001b[39mfit()\n\u001b[1;32m      7\u001b[0m \u001b[38;5;66;03m# Display the summary of the model including the AIC and the significance of coefficients\u001b[39;00m\n\u001b[1;32m      9\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m     10\u001b[0m \u001b[38;5;124;03mCoefficient of AR1: The coefficient for the AR(1) term is 0.9659, with a p-value < 0.001, indicating that it is statistically significant. \u001b[39;00m\n\u001b[1;32m     11\u001b[0m \u001b[38;5;124;03mThis high coefficient suggests a strong autoregressive effect where the current value of sales is heavily influenced by its immediately previous value.\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     18\u001b[0m \u001b[38;5;124;03mbalancing the model's complexity and its ability to explain the data, with lower values indicating better models.\u001b[39;00m\n\u001b[1;32m     19\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'model_arima_100' is not defined"
-     ]
+     "data": {
+      "text/html": [
+       "<table class=\"simpletable\">\n",
+       "<caption>SARIMAX Results</caption>\n",
+       "<tr>\n",
+       "  <th>Dep. Variable:</th>         <td>Sales</td>      <th>  No. Observations:  </th>    <td>96</td>   \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Model:</th>            <td>ARIMA(1, 0, 1)</td>  <th>  Log Likelihood     </th> <td>-816.224</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Date:</th>            <td>Mon, 08 Apr 2024</td> <th>  AIC                </th> <td>1640.448</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Time:</th>                <td>01:10:49</td>     <th>  BIC                </th> <td>1650.705</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Sample:</th>             <td>01-01-2013</td>    <th>  HQIC               </th> <td>1644.594</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th></th>                   <td>- 12-01-2020</td>   <th>                     </th>     <td> </td>   \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Covariance Type:</th>        <td>opg</td>       <th>                     </th>     <td> </td>   \n",
+       "</tr>\n",
+       "</table>\n",
+       "<table class=\"simpletable\">\n",
+       "<tr>\n",
+       "     <td></td>       <th>coef</th>     <th>std err</th>      <th>z</th>      <th>P>|z|</th>  <th>[0.025</th>    <th>0.975]</th>  \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>const</th>  <td> 2074.1434</td> <td>  555.479</td> <td>    3.734</td> <td> 0.000</td> <td>  985.424</td> <td> 3162.863</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>ar.L1</th>  <td>    0.9659</td> <td>    0.057</td> <td>   17.022</td> <td> 0.000</td> <td>    0.855</td> <td>    1.077</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>ma.L1</th>  <td>   -0.8221</td> <td>    0.113</td> <td>   -7.259</td> <td> 0.000</td> <td>   -1.044</td> <td>   -0.600</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>sigma2</th> <td>  1.41e+06</td> <td> 1.76e+05</td> <td>    8.029</td> <td> 0.000</td> <td> 1.07e+06</td> <td> 1.75e+06</td>\n",
+       "</tr>\n",
+       "</table>\n",
+       "<table class=\"simpletable\">\n",
+       "<tr>\n",
+       "  <th>Ljung-Box (L1) (Q):</th>     <td>0.24</td> <th>  Jarque-Bera (JB):  </th> <td>6.81</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Prob(Q):</th>                <td>0.63</td> <th>  Prob(JB):          </th> <td>0.03</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Heteroskedasticity (H):</th> <td>0.63</td> <th>  Skew:              </th> <td>0.49</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Prob(H) (two-sided):</th>    <td>0.20</td> <th>  Kurtosis:          </th> <td>3.87</td>\n",
+       "</tr>\n",
+       "</table><br/><br/>Warnings:<br/>[1] Covariance matrix calculated using the outer product of gradients (complex-step)."
+      ],
+      "text/latex": [
+       "\\begin{center}\n",
+       "\\begin{tabular}{lclc}\n",
+       "\\toprule\n",
+       "\\textbf{Dep. Variable:}          &      Sales       & \\textbf{  No. Observations:  } &     96      \\\\\n",
+       "\\textbf{Model:}                  &  ARIMA(1, 0, 1)  & \\textbf{  Log Likelihood     } &  -816.224   \\\\\n",
+       "\\textbf{Date:}                   & Mon, 08 Apr 2024 & \\textbf{  AIC                } &  1640.448   \\\\\n",
+       "\\textbf{Time:}                   &     01:10:49     & \\textbf{  BIC                } &  1650.705   \\\\\n",
+       "\\textbf{Sample:}                 &    01-01-2013    & \\textbf{  HQIC               } &  1644.594   \\\\\n",
+       "\\textbf{}                        &   - 12-01-2020   & \\textbf{                     } &             \\\\\n",
+       "\\textbf{Covariance Type:}        &       opg        & \\textbf{                     } &             \\\\\n",
+       "\\bottomrule\n",
+       "\\end{tabular}\n",
+       "\\begin{tabular}{lcccccc}\n",
+       "                & \\textbf{coef} & \\textbf{std err} & \\textbf{z} & \\textbf{P$> |$z$|$} & \\textbf{[0.025} & \\textbf{0.975]}  \\\\\n",
+       "\\midrule\n",
+       "\\textbf{const}  &    2074.1434  &      555.479     &     3.734  &         0.000        &      985.424    &     3162.863     \\\\\n",
+       "\\textbf{ar.L1}  &       0.9659  &        0.057     &    17.022  &         0.000        &        0.855    &        1.077     \\\\\n",
+       "\\textbf{ma.L1}  &      -0.8221  &        0.113     &    -7.259  &         0.000        &       -1.044    &       -0.600     \\\\\n",
+       "\\textbf{sigma2} &     1.41e+06  &     1.76e+05     &     8.029  &         0.000        &     1.07e+06    &     1.75e+06     \\\\\n",
+       "\\bottomrule\n",
+       "\\end{tabular}\n",
+       "\\begin{tabular}{lclc}\n",
+       "\\textbf{Ljung-Box (L1) (Q):}     & 0.24 & \\textbf{  Jarque-Bera (JB):  } & 6.81  \\\\\n",
+       "\\textbf{Prob(Q):}                & 0.63 & \\textbf{  Prob(JB):          } & 0.03  \\\\\n",
+       "\\textbf{Heteroskedasticity (H):} & 0.63 & \\textbf{  Skew:              } & 0.49  \\\\\n",
+       "\\textbf{Prob(H) (two-sided):}    & 0.20 & \\textbf{  Kurtosis:          } & 3.87  \\\\\n",
+       "\\bottomrule\n",
+       "\\end{tabular}\n",
+       "%\\caption{SARIMAX Results}\n",
+       "\\end{center}\n",
+       "\n",
+       "Warnings: \\newline\n",
+       " [1] Covariance matrix calculated using the outer product of gradients (complex-step)."
+      ],
+      "text/plain": [
+       "<class 'statsmodels.iolib.summary.Summary'>\n",
+       "\"\"\"\n",
+       "                               SARIMAX Results                                \n",
+       "==============================================================================\n",
+       "Dep. Variable:                  Sales   No. Observations:                   96\n",
+       "Model:                 ARIMA(1, 0, 1)   Log Likelihood                -816.224\n",
+       "Date:                Mon, 08 Apr 2024   AIC                           1640.448\n",
+       "Time:                        01:10:49   BIC                           1650.705\n",
+       "Sample:                    01-01-2013   HQIC                          1644.594\n",
+       "                         - 12-01-2020                                         \n",
+       "Covariance Type:                  opg                                         \n",
+       "==============================================================================\n",
+       "                 coef    std err          z      P>|z|      [0.025      0.975]\n",
+       "------------------------------------------------------------------------------\n",
+       "const       2074.1434    555.479      3.734      0.000     985.424    3162.863\n",
+       "ar.L1          0.9659      0.057     17.022      0.000       0.855       1.077\n",
+       "ma.L1         -0.8221      0.113     -7.259      0.000      -1.044      -0.600\n",
+       "sigma2       1.41e+06   1.76e+05      8.029      0.000    1.07e+06    1.75e+06\n",
+       "===================================================================================\n",
+       "Ljung-Box (L1) (Q):                   0.24   Jarque-Bera (JB):                 6.81\n",
+       "Prob(Q):                              0.63   Prob(JB):                         0.03\n",
+       "Heteroskedasticity (H):               0.63   Skew:                             0.49\n",
+       "Prob(H) (two-sided):                  0.20   Kurtosis:                         3.87\n",
+       "===================================================================================\n",
+       "\n",
+       "Warnings:\n",
+       "[1] Covariance matrix calculated using the outer product of gradients (complex-step).\n",
+       "\"\"\""
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -209,7 +328,7 @@
     "\n",
     "# Fit ARIMA(1,0,1) model to the training data\n",
     "model_arima_101 = ARIMA(train_set['Sales'], order=(1,0,1), seasonal_order=(0,0,0,12))\n",
-    "results_arima_101 = model_arima_100.fit()\n",
+    "results_arima_101 = model_arima_101.fit()\n",
     "\n",
     "# Display the summary of the model including the AIC and the significance of coefficients\n",
     "\n",
